# ur3_chess_player

./: .gitignore  README.md  cnn.drawio  diagram.drawio  notes.md
promotions_count/: count_promotions.py
resources/: cnn.drawio  diagram.drawio
ros2_ws/src/computer_opponent/: package.xml  setup.cfg  setup.py
ros2_ws/src/computer_opponent/computer_opponent/: capture_image.py  chess_cnn.py  chessboard_detection.py  console_input.py  gripper_driver.py  human_move_detection.py  human_move_detection_cnn.py  human_player.py  ik_analitical.py  move_detection.py  move_proxy.py  pose_listener.py  simple_client.py  square_to_xyz.py  stockfish_node.py  stockfish_player.py  test.ipynb  test_client.py  test_ik.py  ui_tkinter.py
ros2_ws/src/computer_opponent/launch/: d455_roi.launch.py  game_pve.launch.py  game_pvp.launch.py  game_two_robots.launch.py
ros2_ws/src/ur3_tcp/: CMakeLists.txt  package.xml
ros2_ws/src/ur3_tcp/action/: MovePiece.action
ros2_ws/src/ur3_tcp/config/: chomp_planning.yaml  joint_limits.yaml  ompl_planning.yaml  ur_controllers.yaml
ros2_ws/src/ur3_tcp/config/ur3/: joint_limits.yaml
ros2_ws/src/ur3_tcp/launch/: moveit.launch.py  mtc_moveit.launch.py  ur_manual_move.launch.py  ur_moveit2.launch.py  ur_moveit_simple.launch.py  view_ur.launch.py
ros2_ws/src/ur3_tcp/meshes/ur3/visual/: chesssboard.dae  chesssboard_small.dae
ros2_ws/src/ur3_tcp/msg/: MoveDetectionStatus.msg  RobotMoveStatus.msg
ros2_ws/src/ur3_tcp/rviz/: view.rviz
ros2_ws/src/ur3_tcp/src/: arm_mover.cpp  arm_mover_srv.cpp  arm_mover_task.cpp  gripper_stage.cpp  minimal.cpp
ros2_ws/src/ur3_tcp/srv/: GripperCmd.srv  MakeMove.srv  MoveJoints.srv  MoveWaypoint.srv
ros2_ws/src/ur3_tcp/urdf/: chessboard.urdf  gripper_dummy.xacro  gripper_tcp.ros2_control.xacro  gripper_tcp.xacro  ur.urdf.xacro  ur_macro.xacro
ros2_ws/src/ur_tcp_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/ur_tcp_moveit_config/config/: kinematics.yaml
ros2_ws/src/ur_tcp_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/ur_tcp_moveit_config/rviz/: rviz.rviz
ros2_ws/src/ur_tcp_moveit_config/srdf/: ur.srdf.xacro  ur.urdf.xacro  ur_macro.srdf.xacro
scripts/: tmux.bash  tmux_cheatsheet.md
servo_control/: COMMAND_EXECUTOR.h  PS4.h  STSCTRL.h  TCP_COMMUNICATION.h  secrets.h  servo_control.ino
vision_system/: find_chessboard.py  full_model.pth  model.onnx  model_weights.pth  model_weights_2.pth  model_weights_3.pth
