<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>computer_opponent</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="igor.siata33@gmail.com">igorsiata</maintainer>
  <license>TODO: License declaration</license>

  <depend>stockfish</depend>
  <depend>chess</depend>
  <depend>xacro</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>ur3_tcp</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
